--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,55 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.TMDB" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TMDB" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/rich_black</item>
+        <item name="colorPrimaryVariant">@color/charleston_green</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/eucalyptus</item>
+        <item name="colorSecondaryVariant">@color/paolo_veronese_green</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/charleston_green</item>
+        <!-- Background color -->
+        <item name="android:windowBackground">@color/charleston_green</item>
+    </style>
+
+    <!-- Splash Screen -->
+    <style name="Theme.TMDB.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/charleston_green</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_tmdb_vertical</item>
+        <item name="postSplashScreenTheme">@style/Theme.TMDB</item>
+    </style>
+
+    <!-- Text -->
+    <style name="Text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Text.Regular">
+        <item name="fontFamily">@font/poppins</item>
+    </style>
+
+    <style name="Text.Medium">
+        <item name="fontFamily">@font/poppins_medium</item>
+    </style>
+
+    <style name="Text.SemiBold">
+        <item name="fontFamily">@font/poppins_semibold</item>
+    </style>
+
+    <!-- Image -->
+    <style name="RoundedImage">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item>
+    </style>
+
+    <style name="RoundedImageBottom">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeBottomLeft">16dp</item>
+        <item name="cornerSizeBottomRight">16dp</item>
     </style>
 </resources>
