feat: Add layout SearchView

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -74,7 +74,7 @@
         style="@style/Text.Regular"
         android:layout_marginEnd="4dp"
         android:text="@string/read_more"
-        android:textColor="@color/eucalyptus"
+        android:textColor="@color/green_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_average_rating" />
