--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.TMDB" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/eucalyptus</item>
-        <item name="colorPrimaryVariant">@color/rich_black</item>
+        <item name="colorPrimary">@color/green_2</item>
+        <item name="colorPrimaryVariant">@color/black_4</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/davy_grey</item>
-        <item name="colorSecondaryVariant">@color/davy_grey</item>
+        <item name="colorSecondary">@color/black_1</item>
+        <item name="colorSecondaryVariant">@color/black_1</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
