--- a/app/src/main/res/layout/item_loading.xml
+++ b/app/src/main/res/layout/item_loading.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:fontFamily="@font/poppins_medium"
         android:textAlignment="center"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="@color/white"
         tools:text="Timeout" />
 
     <ProgressBar
@@ -25,6 +25,7 @@
 
     <Button
         android:id="@+id/retry_button"
+        style="@style/Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
