--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,6 +41,15 @@
         <item name="fontFamily">@font/poppins_semibold</item>
     </style>
 
+    <!-- Button -->
+    <style name="Button">
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:padding">14dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">16dp</item>
+    </style>
+
     <!-- Image -->
     <style name="RoundedImage">
         <item name="cornerFamily">rounded</item>
