--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.TMDB" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -45,9 +45,14 @@
     <style name="Button">
         <item name="fontFamily">@font/poppins_medium</item>
         <item name="android:letterSpacing">0</item>
-        <item name="android:padding">14dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">16dp</item>
+    </style>
+
+    <style name="Button.Rounded">
+        <item name="android:paddingVertical" tools:ignore="NewApi">8dp</item>
+        <item name="android:paddingHorizontal" tools:ignore="NewApi">16dp</item>
+        <item name="cornerRadius">100dp</item>
     </style>
 
     <!-- Image -->
