feat: Remove scroll ripple effect

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
         android:id="@+id/rv_category"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:paddingHorizontal="12dp"
@@ -55,6 +55,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movie"
         android:layout_width="match_parent"
+        android:overScrollMode="never"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layoutAnimation="@anim/layout_animation_scale_in"
@@ -70,7 +71,7 @@
         android:id="@+id/searchView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_search"
         android:closeIcon="@drawable/ic_close_circle"
