--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -33,7 +33,7 @@
         style="@style/Text.SemiBold"
         android:layout_marginHorizontal="16dp"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_poster"
         app:layout_constraintTop_toBottomOf="@id/guideline"
