--- a/app/src/main/res/layout/item_genres.xml
+++ b/app/src/main/res/layout/item_genres.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <Button
-        android:id="@+id/btn_categories"
+        android:id="@+id/btn_genres"
         style="@style/Button.Rounded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
