--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,6 +53,7 @@
         <item name="android:paddingVertical" tools:ignore="NewApi">8dp</item>
         <item name="android:paddingHorizontal" tools:ignore="NewApi">16dp</item>
         <item name="cornerRadius">100dp</item>
+        <item name="backgroundTint">@color/black_2</item>
     </style>
 
     <!-- Image -->
