--- a/app/src/main/res/layout/item_genres.xml
+++ b/app/src/main/res/layout/item_genres.xml
@@ -10,6 +10,7 @@
         style="@style/Button.Rounded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:text="@string/top_rated"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
