--- a/app/src/main/res/layout/layout_genres.xml
+++ b/app/src/main/res/layout/layout_genres.xml
@@ -9,10 +9,9 @@
         android:id="@+id/rv_genre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
+        app:spanCount="4"
         android:paddingHorizontal="12dp"
-        app:spanCount="3"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
