--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -54,6 +54,7 @@
         <item name="android:paddingHorizontal" tools:ignore="NewApi">16dp</item>
         <item name="cornerRadius">100dp</item>
         <item name="backgroundTint">@color/black_2</item>
+        <item name="android:clickable">false</item>
     </style>
 
     <!-- Image -->
