--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -69,6 +69,16 @@
         <item name="cornerSizeBottomRight">16dp</item>
     </style>
 
+    <!-- EditText -->
+    <style name="TextInputLayout">
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="boxCornerRadiusBottomStart">16dp</item>
+        <item name="boxCornerRadiusBottomEnd">16dp</item>
+        <item name="boxCornerRadiusTopStart">16dp</item>
+        <item name="boxCornerRadiusTopEnd">16dp</item>
+        <item name="startIconDrawable">@drawable/ic_search</item>
+    </style>
+
     <!-- SearchView -->
     <style name="SearchView">
         <item name="android:fontFamily">@font/poppins</item>
@@ -77,5 +87,6 @@
         <item name="android:queryHint">@string/search_here</item>
         <item name="android:editTextColor">@color/white_1</item>
         <item name="android:textColorHint">@color/white_1</item>
+        <item name="android:background">@drawable/bg_search</item>
     </style>
 </resources>
