--- a/app/src/main/res/layout/layout_home.xml
+++ b/app/src/main/res/layout/layout_home.xml
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:listitem="@layout/item_genres" />
+        tools:listitem="@layout/item_genre" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movie"
