--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/textView"
-        style="@style/Text.Medium"
+        style="@style/Text.SemiBold"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
