--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:queryBackground="@android:color/transparent"
         android:background="@drawable/bg_search"
         android:closeIcon="@drawable/ic_close_circle"
         android:searchIcon="@drawable/ic_search"
