--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black_2">#3A3F47</color>
     <color name="black_3">#242A32</color>
     <color name="black_4">#00000A</color>
+    <color name="black_transparent">#B3000000</color>
     <color name="black">#000000</color>
-    <color name="transparent_black">#B3000000</color>
 
     <color name="white_1">#EEEEEE</color>
     <color name="white">#FFFFFF</color>
